# mcp-cli-rs

./: Cargo.toml  README.md  test_pipe.rs
.github/workflows/: ci.yml
.opencode/agents/: gsd-codebase-mapper.md  gsd-executor.md  gsd-planner.md
.opencode/command/: gsd-execute-phase.md  gsd-new-project.md  gsd-plan-phase.md  gsd-research-phase.md  gsd-update.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  STATE.md.backup  TEST_COVERAGE_PLAN.md  v1-MILESTONE-AUDIT.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.3-v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-MILESTONE-AUDIT.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: json-schema.md
src/: config_fingerprint.rs  error.rs  lib.rs  main.rs  output.rs  parallel.rs  retry.rs  shutdown.rs  transport.rs
src/cli/: call.rs  command_router.rs  commands.rs  config_setup.rs  daemon.rs  daemon_lifecycle.rs  entry.rs  (+8 more)
test_glob/: Cargo.toml
tests/: command_models_test.rs  config_filtering_tests.rs  config_fingerprint_tests.rs  config_loading_test.rs  cross_platform_daemon_tests.rs  daemon_ipc_tests.rs  daemon_lifecycle_tests.rs  daemon_mode_test.rs  daemon_tests.rs  formatters_test.rs  helpers.rs  invalid_json_args_test.rs  ipc_tests.rs  json_output_tests.rs  lifecycle_tests.rs  list_regression_test.rs  orphan_cleanup_tests.rs  retry_logic_tests.rs  server_disconnection_test.rs  server_timeout_test.rs  tool_call_disabled_test.rs  tool_call_error_tests.rs  tool_call_http_tests.rs  tool_call_stdio_tests.rs  tool_discovery_filtering_tests.rs  tool_filter_call_integration_test.rs  windows_process_spawn_tests.rs  windows_process_tests.rs
(+282 files in other folders)
