[package]
name = "mcp-cli-rs"
version = "0.1.0"
edition = "2021"
description = "MCP CLI client in Rust with cross-platform support"

[dependencies]
# Core framework
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# MCP protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Transport/Network
reqwest = { version = "0.12", features = ["json"] }
http = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
shell-words = "1.1"
glob = "0.3"
dirs = "5.0"
toml = "0.8"
futures-util = "0.3"

# IPC/Networking
interprocess = { version = "2.3", features = ["tokio"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security"] }

# Cryptography (for config fingerprinting)
sha2 = "0.10"
hex = "0.4"

# Daemon binary
[[bin]]
name = "mcp-daemon"
path = "src/bin/daemon.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"
