[package]
name = "mcp-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "2.0"
clap = { version = "4.5", features = ["derive"] }
windows-sys = { version = "0.61", features = ["Win32_System_Threading"] }
futures = "0.3"
futures-util = "0.3"
backoff = { version = "0.4", features = ["futures"] }
backoff-futures = "0.3.2"
async-trait = "0.1"
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
sha2 = "0.10"
dirs = "5.0"
toml = "0.8"
hex = "0.4"
tempfile = "3.24.0"
rand = "0.8"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }

[[bin]]
name = "mock-mcp-server"
path = "tests/fixtures/mock_mcp_server.rs"
